# Travel_Globe

./: .gitignore  AGENTS.md  FLIGHTGEAR_LICENSE.txt  LICENSE  README.md  Travel Globe Implementation Plan.docx  deploy.sh  handoff.md  netlify.toml  project.yml
AviationDB/: .env.example  .gitignore  README.md  RULES.md  pyproject.toml
AviationDB/config/: countries.yaml  sources.yaml  sources_aixm.yaml  validation.yaml
AviationDB/docs/: source-acquisition-log.md
AviationDB/scripts/: batch_download.py  download_argentina.py  download_australia.py  download_austria.py  download_bahrain.py  download_bangladesh.py  download_brazil.py  download_cambodia.py  download_canada.py  download_chile.py  download_colombia.py  download_costarica.py  download_cuba.py  download_czech.py  download_denmark.py  download_dominicanrep.py  download_ead_dp.py  download_egypt.py  download_fiji.py  download_finland.py  download_france.py  download_germany.py  download_greece.py  download_hungary.py  download_indonesia.py  download_ireland.py  download_israel.py  download_italy.py  download_jordan.py  download_kenya.py  download_kuwait.py  download_laos.py  download_mexico.py  download_morocco.py  download_myanmar.py  download_nepal.py  download_netherlands.py  download_newzealand.py  download_nigeria.py  download_norway.py  (+34 more)
AviationDB/src/aviationdb/: __init__.py  __main__.py  build.py  cli.py  config.py  download.py  geo.py  logging.py  models.py  repository.py  routing.py  (+3 more)
AviationDB/tests/: test_arinc424.py  test_coordinates.py  test_download.py  test_europe_parser.py  test_pipeline.py
(+226 files in other folders)
